--- a/sass/components/_adaptive-inherit.scss
+++ b/sass/components/_adaptive-inherit.scss
@@ -46,6 +46,26 @@
   }
 }
 
+
+
+
+
+.title {
+  @include tablet {
+    font-size: 32px;
+  }
+  font-size: 18px;
+  padding-bottom: 15px;
+}
+
+.text {
+  font-size: 14px;
+  line-height: 1.3;
+  padding-bottom: 15px;
+}
+
+
+
 // $colors: "#f44336", "#3f51b5", "#4caf50", "#000cd4", "#e91e63", "#009688";
 
 // @include colorize($colors, ".item");
